--- a/main.html
+++ b/main.html
@@ -26,6 +26,12 @@
     <div id="content"></div>
   </div>
 
+<!--FIREBASE PROJECT-->
+<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-storage-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database-compat.js"></script>
+
   <script src="backend.js"></script>
 </body>
 </html>
