--- a/main.html
+++ b/main.html
@@ -20,17 +20,11 @@
   <div id="dashboard" style="display: none;">
     <nav>
       <a href="#" onclick="showHome()">Home</a>
-      <a href="#" onclick="showAbout()">About</a>
+      <a href="#" onclick="showAbout()">About Us</a>
       <a href="#" onclick="logout()">Logout</a>
     </nav>
     <div id="content"></div>
   </div>
-
-<!--FIREBASE PROJECT-->
-<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-storage-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database-compat.js"></script>
 
   <script src="backend.js"></script>
 </body>
