--- a/main.html
+++ b/main.html
@@ -26,6 +26,14 @@
     <div id="content"></div>
   </div>
   
+  <!--Firebase Project-->
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-storage-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-database-compat.js"></script>
+  
+
+  <script src="firebase-config.js"></script>
   <script src="backend.js"></script>
 </body>
 </html>
