--- a/main.html
+++ b/main.html
@@ -25,6 +25,12 @@
     </nav>
     <div id="content"></div>
   </div>
+
+    <!-- Halaman Logout -->
+<div id="logoutPage" style="display: none;">
+  <h2>You have been logged out</h2>
+  <p>Thank you for using our application!</p>
+</div>
   
   <!--Firebase Project-->
   <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app-compat.js"></script>
